centrando el main

--- a/clase_7/css/style.css
+++ b/clase_7/css/style.css
@@ -1,3 +1,5 @@
 .info-personal{background-color: #C4C4C4;}
 .educacion{background-color: #C4C4C4;}
 .experiencia-laboral{background-color: #C4C4C4;}
+h1{font-size: large; text-align: center; }
+main{text-align: center;}
