--- a/clase_7/css/style.css
+++ b/clase_7/css/style.css
@@ -1,5 +1,24 @@
-.info-personal{background-color: #C4C4C4;}
-.educacion{background-color: #C4C4C4;}
-.experiencia-laboral{background-color: #C4C4C4;}
-h1{font-size: large; text-align: center; }
-main{text-align: center;}
+body{
+    margin: 145px;
+}
+header{
+    background-color: #e5e5e5;
+box-align:center;
+}
+h1{font-weight: 500;
+     text-align: center;
+ }
+h3{
+    color: #005677;
+    background-color: #c4c4c4;
+    text-align: center;
+    text-transform: uppercase;
+}
+
+span{
+    font-weight: bold;
+}
+footer{
+    background-color:#005677;
+    text-align: center;
+}
